--- a/standalone/mygame_unreal5/MyGameUnreal5.uproject
+++ b/standalone/mygame_unreal5/MyGameUnreal5.uproject
@@ -5,7 +5,7 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "game_unreal5",
+			"Name": "MyGameUnreal5",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
